--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -65,16 +65,15 @@ body {
   margin: 0 auto;
 }
 
-
 header {
   background-color: #000;
   box-sizing: border-box;
   width: 100%;
-  height:80px;
+  height: 80px;
   padding: 14px 220px;
-  font-weight: 400;
-  font-size: 19px;
-  line-height: 1.2;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.4;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -82,37 +81,50 @@ header {
 }
 
 .logo {
-  width: 82px;
-  height: 52px;
+  width: 80px;
+  height: 50px;
   margin-right: 63px;
   position: relative;
   border: 1px solid #FFFFFF;
   border-radius: 2px;
-  text-align: center;
   display: flex;
   align-items: center;
+  z-index: 1;
 }
 
-.logo::before {
+.logo::after {
   content: "";
   display: block;
-  width: 7px;
-  height: 21px;
+  width: 100%;
+  height: 22px;
+  width: 12px;
   position: absolute;
-  background-image: url("../../assets/icons/bamboo.svg");
+  top: 22px;
+  left: 9px;
+  background-image: url(../../assets/icons/bamboo.svg);
+  background-size: contain;
+  z-index: -1;
 }
 
 .logo-text {
   font-weight: 400;
-  font-size: 19px;
-  line-height: 120%;
+  font-size: 19.01px;
+  line-height: 22.82px;
+  text-align: center;
 }
 
 .nav-list {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 58px;
+  gap: 58.5px;
+}
+
+.active-link {
+  background: linear-gradient(113.96deg, #F9804B 1.49%, #FE9013 101.44%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
 }
 
 .design-link {
@@ -148,10 +160,10 @@ header {
 
 .watch-header::before {
   content: "";
-  position:absolute;
+  position: absolute;
   z-index: -1;
-  top:12px;
-  left:-73px;
+  top: 12px;
+  left: -73px;
   width: 465px;
   height: 465px;
   border-radius: 50%;
@@ -164,7 +176,7 @@ header {
   border-radius: 25px;
   margin-top: 60px;
   margin-left: 983px;
-  color:#FFF;
+  color: #FFF;
   font-size: 16px;
   line-height: 22.4px;
   font-weight: 500;
